# tchumyt-yofy

./: .gitignore  LICENSE  README.md  main.py  mlflow-main.py  mlflow-main_explorer.py  mlflow-main_gpt.py  mlflow-main_rnn.py  mlflow-main_tmyts.py  project-structure copy.py  tokenizer_train_main.py  variables.env
llm/: README.md  __init__.py  project-structure.py  pyproject.toml
llm/configs/: dataset_config.yaml  dataset_loader_config copy.yaml  dataset_loader_config.yaml  gpt_config_124m.yaml  gpt_config_124m_test.yaml  init_config.yaml  logging-config.json  test_json_reader.json  test_trainer_cfg.yaml  trainer_cfg.yaml
llm/configs/logger/: logging-config-test.json  logging-config.json
llm/configs/model/: gpt-config-test.yaml  rnn-config-test.yaml
llm/configs/trainer/: trainer-cfg-test.yaml  trainer-cfg.yaml
llm/llm/: __init__.py
llm/llm/architecture/: abstract_model.py  attention.py  attention_functions.py  (+5 more)
llm/notebooks/: attention_lab.ipynb  embedding_lab.ipynb  positional_encoding_lab.ipynb  scaled_dot_product_lab.ipynb
llm/reports/: conv_out.ods  model_summary.txt  report.py
llm/resources/: bpe_tokenizer.json  emoji_list.txt  raw_emoji_list.txt  template_beam_chunk_pipeline.json  template_beam_solr_mongo.json  template_model_gpt.json  template_model_mongodb.json  template_tmyts_model.json  template_tmyts_model_v_0_1.json  test_RNNMODEL_LSTM_1_1.json  testing.json  testing_stride_1_cl_64.json  tokenizer_config_template.json  wiki_tokenizer.json
llm/utils/: commons.py  tchumyt_mongo_client.py  yaml_loader.py
llm/yamls/: logging-config.json
(+103 files in other folders)
