[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Bruno Adam Osiek <baosiek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
torch = "^2.5.1"
PyYAML = "^6.0.2"
pytest = "^8.3.3"
tiktoken = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
