[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Bruno Adam Osiek <baosiek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
torch = "^2.5.1"
torchinfo = "^1.8.0"
PyYAML = "^6.0.2"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
tiktoken = "^0.8.0"
mlflow = "^2.20.1"
tokenizers = "^0.21.1"
datasets = "^3.4.1"
pymongo = "^4.11"

[tool.poetry.dev-dependencies]
pytest = "^8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
